--- a/relazione.tex
+++ b/relazione.tex
@@ -41,7 +41,7 @@ All'algoritmo viene passato un parametro $k$. Verranno presi i $k$ punti del \te
 
 Come già detto, il codice presentato non è semplicemente lo svolgimento dell'algoritmo, bensì un codice che permette di stabilire per quale parametro $k$ l'algoritmo funziona meglio sui punti considerati.
 
-Il \href{https://github.com/DavideP02/Octave_KNN_Peccioli5H/blob/main/KNN.m}{codice} è visualizzabile su GitHub.
+Il \href{https://github.com/DavideP02/Octave_KNN_Peccioli5H/blob/main/KNN.m}{codice commentato} è visualizzabile su GitHub.
 
 \section{Risultati}
 
